--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.cloudedquartz.functionaltext/com.cloudedquartz.functionaltext.HelloApplication
+                                com.cloudedquartz.functionaltext/com.cloudedquartz.functionaltext.FunctionalTextApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
